# apple-vision-utils

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml
apple_vision_utils/: cli.py  utils.py
tests/: __init__.py  test.sh
tests/data/: en.tiff
